tests/snapshots/yaml_suite_snapshots__yaml_suite_W5VH_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Allowed characters in alias
  from: "@perlpunk"
  tags: alias 1.3-err
  yaml: "a: &:@*!$\"<foo>: scalar a\nb: *:@*!$\"<foo>:\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :a\n   =VAL &:@*!$\"<foo>: :scalar a\n   =VAL :b\n   =ALI *:@*!$\"<foo>:\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": \"scalar a\",\n  \"b\": \"scalar a\"\n}\n"
