tests/snapshots/yaml_suite_snapshots__yaml_suite_W9L4_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Literal block scalar with more spaces in first line
  from: "@perlpunk"
  tags: error literal whitespace
  fail: true
  yaml: "---\nblock scalar: |\n␣␣␣␣␣\n  more spaces at the beginning\n  are invalid\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :block scalar\n"
