tests/snapshots/yaml_suite_snapshots__yaml_suite_W9L4_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Literal block scalar with more spaces in first line
  tags: error literal whitespace
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :block scalar\n"
  yaml: "---\nblock scalar: |\n␣␣␣␣␣\n  more spaces at the beginning\n  are invalid\n"
