tests/snapshots/yaml_suite_snapshots__yaml_suite_WZ62_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 7.2. Empty Content
  from: "http://www.yaml.org/spec/1.2/spec.html#id2786720"
  tags: spec flow scalar tag
  yaml: "{\n  foo : !!str,\n  !!str : bar,\n}\n"
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :foo\n   =VAL <tag:yaml.org,2002:str> :\n   =VAL <tag:yaml.org,2002:str> :\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": \"\",\n  \"\": \"bar\"\n}\n"
  dump: "foo: !!str\n!!str : bar\n"
