tests/snapshots/yaml_suite_snapshots__yaml_suite_WZ62_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "foo: !!str\n!!str : bar\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2786720"
  json: "{\n  \"foo\": \"\",\n  \"\": \"bar\"\n}\n"
  name: Spec Example 7.2. Empty Content
  tags: spec flow scalar tag
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :foo\n   =VAL <tag:yaml.org,2002:str> :\n   =VAL <tag:yaml.org,2002:str> :\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  yaml: "{\n  foo : !!str,\n  !!str : bar,\n}\n"
